Disallow having a panel smaller than its minimum size

BUG:476745