shell/panelview.cpp
@@ -676,9 +676,11 @@ void PanelView::resizePanel()
         return;
     } else if (m_lengthMode == PanelView::LengthMode::FitContent) {
         if (formFactor() == Plasma::Types::Vertical) {
-            s = QSize(totalThickness(), std::min(m_screenToFollow->size().height(), m_contentLength + m_topFloatingPadding + m_bottomFloatingPadding));
+            s = QSize(totalThickness(),
+                      std::max(10, std::min(m_screenToFollow->size().height(), m_contentLength + m_topFloatingPadding + m_bottomFloatingPadding)));
         } else {
-            s = QSize(std::min(m_screenToFollow->size().width(), m_contentLength + m_leftFloatingPadding + m_rightFloatingPadding), totalThickness());
+            s = QSize(std::max(10, std::min(m_screenToFollow->size().width(), m_contentLength + m_leftFloatingPadding + m_rightFloatingPadding)),
+                      totalThickness());
         }
         setMinimumSize(QSize(10, 10));
         setMaximumSize(s);
